start rewriting integration tests (#442)
* start rewriting integration tests

* reduce memory

* cleanup